fixed dark mode

--- a/src/app/notepad/notepad.component.scss
+++ b/src/app/notepad/notepad.component.scss
@@ -20,7 +20,8 @@
 input {
   font-size: 1.2rem;
   padding: 0.75rem 1rem;
-  line-height: 1.5rem; // Ensures consistency in vertical spacing
+  line-height: 1.5rem;
+  color: var(--black-01);
 }
 
 .task {
@@ -30,8 +31,12 @@ input {
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
-  background-color: var(--white-02);
+  background-color: var(--white-01);
   cursor: move;
+
+  &.editing {
+    cursor: auto;
+  }
 }
 
 input {
@@ -99,7 +104,7 @@ input {
   transform: translateY(-0%);
   height: 2px;
   width: 0;
-  background-color: var(--black-02);
+  background-color: var(--black-01);
   transition: width 0.3s ease-in-out;
 }
 
@@ -149,7 +154,7 @@ input {
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  background-color: var(--white-02);
+  background-color: var(--white-01);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 5px;
   padding: 1rem;
