--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -24,6 +24,7 @@
       font-size: 1.5rem;
       cursor: pointer;
       transition: transform 0.3s ease-in-out 0.1s;
+      color: var(--accent-01);
       transform: rotate(0);
 
       &.open {
@@ -43,11 +44,16 @@
     padding: 1rem;
     border-radius: 0 0 15px 0;
     transform: translateX(-150%);
-    background-color: var(--white-02);
+    background-color: var(--white-01);
     box-shadow:
       rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
     transition: 0.2s ease-in-out;
+
+    &.dark {
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
 
     &.open {
       transform: translateX(0);
@@ -69,13 +75,14 @@
       justify-content: center;
       transform: rotate(0deg);
       transition: .3s ease-in;
+      cursor: pointer;
 
       i {
         font-size: 1.5rem;
       }
 
       &.dark {
-        transform: rotate(-180deg);
+        //transform: rotate(-180deg);
       }
     }
     
@@ -97,7 +104,7 @@
         border: none;
         padding: 0;
         border-radius: 50%;
-        border:1px solid black;
+        border:2px solid var(--black-01);
         overflow: hidden;
         -webkit-appearance: none;
         appearance: none;
@@ -116,8 +123,16 @@
         text-align: center;
         font-size: 0.875rem;
         padding: 0.25rem;
-        border: 1px solid #ccc;
+        border: 1px solid var(--black-01);
         border-radius: 4px;
+        color: var(--black-01);
+        background-color: var(--white-01);
+        outline: none;
+
+        &:focus {
+          border: 1px solid var(--accent-01);
+          outline: 1px solid var(--accent-01);
+        }
       }
     }
 
@@ -126,11 +141,12 @@
         color: var(--white-01);
         background-color: var(--accent-01);
         border-radius: 15px;
-        padding: .5rem 1rem;
+        padding: .65rem 1rem;
         border:none;
         font-size: 1rem;
-        font-weight: 500;
+        font-weight: 600;
         align-self: center;
+        cursor: pointer;
     }
   }
 
